@@ -121,6 +121,7 @@ Bug Fixes:
   before calling into C functions, raising a Stack_overflow exception
   otherwise.  This reduces (but does not eliminate) the risk of
   segmentation faults due to stack overflow in C code
+- PR#5073: wrong location for 'Unbound record field label' error
 - PR#5084: sub-sub-module building fails for native code compilation
 - PR#5120: fix the output function of Camlp4.Debug.formatter
 - PR#5159: better documentation of type Lexing.position
